syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "TelegramProto";

service TelegramService {
  rpc ConnectTelegram (ConnectTelegramRequest) returns (ConnectTelegramResponse);
}

message ConnectTelegramRequest {
  string userUuid = 1;
  int64 telegramId = 2;
}

message ConnectTelegramResponse {
  bool success = 1;
  string username = 2;
}
